static/css/style.css
:root {
    --f1-red: #E13726;
    --white: #fff;
    --black: #000;
    --green: #2cd341;
    --yellow: #ebff00;
}

@font-face {
    font-family: Formula1-Black;
    src: url('Formula1-Black.ttf');
}

@font-face {
    font-family: Formula1-Bold;
    src: url('Formula1-Bold.ttf');
}

@font-face {
    font-family: Formula1-Regular;
    src: url('Formula1-Regular.ttf');
}

@font-face {
    font-family: Formula1-Wide;
    src: url('Formula1-Wide.ttf');
}

body {
    font-family: 'Formula1-Regular';
}

/* sections */
.min-section-height {
    min-height: 15rem;
}

.section-padding {
    padding-bottom: 1.75rem;
}

.white-section {
    color: var(--black);
    background-color: var(--white);
}

.black-section {
    color: var(--white);
    background-color: var(--black);
}


.red-section {
    color: var(--white);
    background-color: var(--f1-red);
}

.yellow-section {
    color: var(--black);
    background-color: var(--yellow);
}

.green-section {
    color: var(--black);
    background-color: var(--green);
}

.section-heading {
    font-family: 'Formula1-Bold';
    font-size: 1.75rem;
    text-decoration: solid underline;
}

/* header */

#logo-image {
    height: 100%;
    padding: 1rem 0 1rem 1rem;
}

/* navbar */

.navbar {
    border-bottom: 1.75rem solid var(--f1-red);
    padding: 0;
}

.nav-link {
    font-family: 'Formula1-Regular';
    color: var(--black);
    text-align: center;
    align-items: center;
    font-size: larger;
}

.nav-item {
    display: flex;
    align-items: center;
}

.navbar-toggler {
    background-color: var(--f1-red);
    margin: 0 auto;
}

.navbar-toggler-icon .fa-bars {
    color:var(--white); 
    font-size: 1.75rem;
}

.nav-link:hover {
    color: var(--f1-red);
}

/* carousel */

.carousel-inner div {
    height: 52rem;
}

.promote-race-text {
    width: 60%;
}

/* race details */

#A, #B, #C, #D {
    fill: var(--f1-red);
    stroke: var(--black);
    stroke-width: 4;
}

#individual_seats {
    width:100%
}

.race-fact {
    font-family: 'Formula1-Bold';
    font-size: 3rem;
}

.stand-font {
    font-weight: bold;
    font-size: 1.75rem;
}

.race-fact-title {
    font-family: 'Formula1-Bold';
    font-size: 1.25rem;
}

#A:hover, #B:hover, #C:hover, #D:hover {
    fill: var(--green);
}

.race-fact:hover {
    text-shadow: 2px 2px 3px var(--f1-red);
}

/* cards */

#how-to-book-section .card-body {
    margin-top: 0.2rem;
    background-color: var(--white);
    color: var(--black);
}

.card {
    width: 75%;
    text-align: center;
}

.card-img-top {
    object-fit: contain;
    height: 15rem;
}

.my-ticket-body {
    background-color: var(--black);
}

/* footer */

footer ul {
    padding: 0;
}

footer a {
    text-decoration: none;
}

.socials li {
    display: inline;
}

.socials i {
    color: var(--white);
    font-size: 2.5rem;
    width: 23.5%;
    text-align: center;
    padding: 1.75rem 0 1rem;
    transition-delay: 0.2s;
}

.section-links li {
    text-align: center;
    list-style: none;
}

.section-links a {
    color: var(--white);
    font-weight: bold;
    padding: 0.5rem 0;
    font-family: 'Formula1-Regular';
}

.socials i:hover, .section-links li a:hover {
    color: var(--black);
}

/* animation */

#flag {
    position: absolute;
    top: -500px;
}

/* teams styling */

.ticket {
    width: 100%;
    height: 15rem;
}

.flag {
    position: absolute;
    top: 5%;
    right: 5%;
}

.logo {
    position: absolute;
    top: 5%;
    left: 5%;
}

.ticket-text {
    font-size: 5rem;
    font-family: 'Formula1-Bold';
}

.mclaren {
    background-color: #fa8905;
    color: #23b5dc;
}

.alfa_romeo {
    background-color: #e9063a;
    color: var(--white);
}

.alphatauri {
    background-color: var(--white);
    color: #01219a;
}

.alpine {
    background-color: #1445eb;
    color: var(--white);
}

.aston_martin {
    background-color: var(--white);
    color: #014b2c;
}

.ferrari {
    background-color: var(--f1-red);
    color: #feff00;
}

.haas {
    background-color: var(--white);
    color: var(--f1-red);
}

.mercedes {
    background-color: #10d3ca;
    color: #464749;
}

.red_bull {
    background-color: #083bc0;
    color: #db0a17;
}

.williams {
    background-color: var(--white);
    color: #00d2ff;
}

/* ticket pages */

.lead-heading {
    font-family: 'Formula1-Bold';
}

.lead {
    align-content: center;
    padding: 0 5%;
}

/* buttons */

.btn-f1 {
    font-family: 'Formula1-Bold';
    background-color: var(--f1-red);
    color: var(--white);
    font-weight: bold;
}

.remove-underline-f1 {
    text-decoration: none;
    color: var(--black);
}

.remove-underline-ticket {
    text-decoration: none;
    color: var(--black);
}

.ticket-button {
    font-family: 'Formula1-Bold';
    background-color: var(--green);
    font-weight: bold;
}

.btn-f1:hover {
    background-color: var(--yellow);
    color: var(--black);
}

.remove-underline-f1:hover {
    color: var(--f1-red);
}

.remove-underline-ticket:hover {
    color: var(--yellow);
}

.ticket-button:hover {
    background-color: var(--f1-red);
}

/* pagination */

.page-link {
    background-color: var(--f1-red);
    color: var(--white);
}

/* forms */

.f1-form {
    padding: 0 3rem;
}

.f1-form label {
    padding: 1rem 0;
}

.f1-form button {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

/* media query for tablet screens and larger */
@media screen and (min-width:768px) {

    /* carousel */
    .carousel-inner div {
        height: 30rem;
}

    /* forms */
    .f1-form {
        padding: 0 6rem;
    }
}

/* media query for large screens*/
@media screen and (min-width:992px) {

    /* carousel */
    .carousel-inner div {
        height: 25rem;
}

    /* cards */
    #how-to-book-section .card-body {
        height: 20rem;
    }
}

/* media query for larger screens*/
@media screen and (min-width:1400px) {

    /* cards */
    #how-to-book-section .card-body {
        height: 15rem;
    }
}

